--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -8,9 +8,12 @@
           <div class="col"  ng-click="activitytab=2" ng-class="{'color_border':activitytab==2}">
             <p>Meus Palpites</p>
           </div>
-          <div class="col" ng-click="goto('/app/profile')">
+          <div class="col" ng-click="activitytab=3" ng-class="{'color_border':activitytab==3}">
+             <p>Campeonatos</p>
+           </div>
+          <!--<div class="col" ng-click="goto('/app/profile')">
             <p>Campeonatos</p>
-          </div>
+          </div>-->
           <!--<div class="col col-10"  ng-click="goto('/app/add_post')">
              <i class="ion-plus"></i>
           </div>-->
@@ -85,13 +88,14 @@
                     </a>-->
             </div>
             <div  class="people_follow"  ng-switch-when="2" >
-                  <div class="list_people"
-                    collection-repeat="item in discover"
-                    collection-item-width="'100%'"
-                    collection-item-height="80"
-                    >      
                     <div class="row">
-                        <div class="col col-20">
+                        <select style="width:100%;font-size:15px;height:35px"
+                                ng-change="meuspalpitescampeonato(opcao)"
+                                ng-model="opcao"
+                                ng-options="campeonato.ch_id as campeonato.ch_nome for campeonato in campeonatos">
+                            <option>--</option>
+                        </select>
+                        <!--<div class="col col-20">
                             <div class="f_item" style="background:url({{item.img}})no-repeat;
                             background-size:100% 100%;"></div>
                         </div>
@@ -102,10 +106,26 @@
                         </div>
                         <div class="col follow_icon" ng-class="{'color_icon':item.type!=1}" ng-click="changestatus(item)">
                            <i class="ion-checkmark-circled"></i>
-                        </div>
+                        </div>-->
                     </div>
+                <div>
+                    <div class="people_follow">
+                        <select style="width:100%;font-size:15px;height:35px"
+                                ng-change="meuspalpitescampeonato(opcao)"
+                                ng-model="opcao"
+                                ng-options="ronda.rd_id as ronda.rd_round for round in rounds">
+                            <option>--</option>
+                        </select>
                     </div>
                 </div>
+                </div>
+            <div ng-switch-when="3">
+                <ion-list>
+                    <ion-item ng-repeat="campeonato in campeonatos">
+                        {{campeonato.ch_nome}}
+                    </ion-item>
+                </ion-list>
+             </div>
         </div>    
   </ion-content>
 </ion-view>
