--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,6 +1,6 @@
   <ion-content class="login_page">
       <div class="logo">
-          <img src="http://www.bolaocraquedebola.com.br/assets/img/iconelogo.png"/>
+          <img width="100px" src="http://www.bolaocraquedebola.com.br/assets/img/iconelogo.png"/>
           <p>Bolao Craque de Bola</p>
       </div>
       <div ng-controller="LoginCtrl">
