--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="false" ng-controller="MenuCtrl">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable" align-title="left">
       <ion-nav-back-button class="button button-icon button-clear bak_arr"> 
@@ -11,15 +11,16 @@
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
       <button class="button button-icon">
-        <i class="ion-flag"></i>
-        <span class="badge">3</span>
+        <!--<i class="ion-social-usd"></i>-->
+           R$ {{cash}}
+        <!--<span class="badge">3</span>-->
       </button>
-       <button ng-click="goto('/app/contact')" class="button button-icon">
+       <!--<button ng-click="goto('/app/contact')" class="button button-icon">
         <i class="ion-email"></i>
-      </button>
-       <button class="button button-icon" ng-click="opensearch_modal()">
+      </button>-->
+       <!--<button class="button button-icon" ng-click="opensearch_modal()">
         <i class="ion-ios-search-strong"></i>
-      </button>
+      </button>-->
    </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
